--- a/corantioquia.html
+++ b/corantioquia.html
@@ -31,7 +31,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="corantioquia.html">Corantioquia</a>
@@ -60,7 +60,7 @@
           </nav>
     </header>
     <main>
-      <section class="fondo">
+      <section class="fondo1">
 
       </section>
       <section>
@@ -71,8 +71,8 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-4 text-center">
-              <h2> Estadisticas Empleados</h2>  
-              <img src="./img/TIGRE.jpg" alt="" 
+              <h2> Estadisticas Corantioquia</h2>  
+              <img src="./img/Logo-Corantioquia.jpg" alt="" 
               class="img-fluid w-100">
             </div>
             <div class="col-12 col.md-8">
@@ -86,18 +86,21 @@
                 <li class="nav-item" role="presentation">
                   <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">ANALISTAS 3</button>
                 </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">ANALISTAS 4</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">ANALISTAS 5</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">ANALISTAS 6</button>
+                </li>
                 
               </ul>
               <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-                  <iframe src="./datosanalistas1.html" frameborder="0" class="w-100 mt-5" height="400"></iframe>
-                </div>
-                <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"> 
-                  <iframe src="./datosanalistas1.html" frameborder="0" class="w-100 mt-5" height="400"></iframe>
-                </div>
-                <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
-                  <iframe src="./datosanalistas1.html" frameborder="0" class="w-100 mt-5" height="400"></iframe>
-                </div>
+                <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">  Ejem  </div>
+                <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"> Ejem </div>
+                <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0"> Ejem 1   </div>
                 
               </div>
             </div>
@@ -118,10 +121,12 @@
             <div class="container">
               <div class="row justify-content-center">
                 <div class="col-12">
-                  <img src="./img/perfil.webp" alt="foto" 
+                  <img src="./img/corantioquia.jpg" alt="foto" 
                   class="d-block  mx-auto ">
-                  <h3> Carlos Mario Gutierrez Gil</h3>
-                  <p>No es cuestion de suerte, es mucho mas simple, solo debes creer en ti</p>
+                  <h3> Corantioquia</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, magni! Quasi, eaque! 
+                    Temporibus quod deserunt unde vitae magni molestias, quisquam, voluptatibus saepe odit 
+                    libero ex voluptatem quaerat incidunt optio perferendis?</p>
                 </div>
               </div>
             </div>
